# chess

./: CMakeLists.txt  CMakePresets.json  chessrules.cpp  main.cpp  rooster
.github/workflows/: actions-test-cmake-single-platform.yml  c-cpp.yml
include/: bishop.h  bishop.hpp  chessboard.h  chessboard.hpp  chesspiece.h  chesspiece.hpp  chessrules.h  chessrules.hpp  common.h  common.hpp  king.h  king.hpp  knight.h  knight.hpp  pawn.h  pawn.hpp  queen.h  queen.hpp  rook.h  rook.hpp
src/: bishop.cpp  chessboard.cpp  chesspiece.cpp  chessrules.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  queen.cpp  rook.cpp
test/: test_bishop.cpp  test_chessboard.cpp  test_chesspieces.cpp  test_chessrules.cpp  test_king.cpp  test_knight.cpp  test_pawn.cpp  test_queen.cpp  test_rook.cpp
